--- a/wkQuiz/ihm-quizz/src/application/vue/Editeur.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/Editeur.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -7,23 +13,8 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fx:id="AcceuilBouton" fitHeight="96.0" fitWidth="96.0" layoutX="32.0" layoutY="20.0">
-         <image>
-            <Image url="@images/IconeAcceuil.png" />
-         </image>
-      </ImageView>
-      <Text fill="WHITE" layoutX="26.0" layoutY="147.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Acceuil" textAlignment="CENTER">
-         <font>
-            <Font name="Open Sans Regular" size="32.0" />
-         </font>
-      </Text>
-      <ImageView fitHeight="290.0" fitWidth="4.0" layoutX="506.0" layoutY="264.0">
-         <image>
-            <Image url="@images/Connector%20line.png" />
-         </image>
-      </ImageView>
       <Button fx:id="CreerCategorieBouton" layoutX="237.0" layoutY="247.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="510.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60px;" styleClass="cavajamaismarcher" stylesheets="@css/mainStyle.css" text="Créer une Catégorie ou Catégorie" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font size="24.0" />
@@ -82,5 +73,19 @@
             <Image url="@images/Connector%20line.png" />
          </image>
       </ImageView>
+      <Group layoutX="32.0" layoutY="20.0">
+         <children>
+            <Text fill="WHITE" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Acceuil" textAlignment="CENTER">
+               <font>
+                  <Font name="Open Sans Regular" size="32.0" />
+               </font>
+            </Text>
+            <ImageView fx:id="AcceuilBouton" fitHeight="96.0" fitWidth="96.0">
+               <image>
+                  <Image url="@images/IconeAcceuil.png" />
+               </image>
+            </ImageView>
+         </children>
+      </Group>
    </children>
 </Pane>
