--- a/wkQuiz/ihm-quizz/src/application/vue/Acceuil.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/Acceuil.fxml
@@ -56,21 +56,21 @@
             </ImageView>
          </graphic>
       </Button>
-      <Group layoutX="32.0" layoutY="20.0" onTouchPressed="#quitter">
+      <Group layoutX="33.0" layoutY="15.0" onMouseClicked="#quitter">
          <children>
             <ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/IconeQuitter.png" />
                </image>
             </ImageView>
-            <Label contentDisplay="CENTER" layoutX="1.0" layoutY="72.0" prefHeight="57.0" prefWidth="128.0" text="Quitter" textFill="WHITE">
+            <Label contentDisplay="CENTER" layoutX="-1.0" layoutY="71.0" prefHeight="57.0" prefWidth="128.0" text="Quitter" textFill="WHITE">
                <font>
                   <Font size="32.0" />
                </font>
             </Label>
          </children>
       </Group>
-      <Group fx:id="aide" layoutX="890.0" layoutY="20.0">
+      <Group fx:id="aide" layoutX="890.0" layoutY="20.0" onMouseClicked="#aider">
          <children>
             <ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true">
                <image>
