--- a/wkQuiz/ihm-quizz/src/application/vue/EditerQuestion.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/EditerQuestion.fxml
@@ -20,7 +20,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1450.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Group layoutX="32.0" layoutY="20.0">
+      <Group layoutX="32.0" layoutY="20.0" onMouseClicked="#retour">
          <children>
             <ImageView fx:id="RetourBouton" fitHeight="96.0" fitWidth="96.0">
                <image>
@@ -94,7 +94,7 @@
             <Font size="28.0" />
          </font>
       </RadioButton>
-      <Button fx:id="CreerQuestionBouton" layoutX="1010.0" layoutY="28.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="360.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60px;" styleClass="cavajamaismarcher" stylesheets="@css/mainStyle.css" text="Créer une Question" textAlignment="CENTER" textFill="WHITE">
+      <Button fx:id="CreerQuestionBouton" layoutX="1010.0" layoutY="28.0" mnemonicParsing="false" onAction="#versCreerQuestion"  prefHeight="80.0" prefWidth="360.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60px;" styleClass="cavajamaismarcher" stylesheets="@css/mainStyle.css" text="Créer une Question" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
