--- a/wkQuiz/ihm-quizz/src/application/vue/CreationQuestionetCategorie.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/CreationQuestionetCategorie.fxml
@@ -19,7 +19,7 @@
          <content>
             <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#retourAcceuil" prefHeight="900.0" prefWidth="1300.0" style="-fx-background-color: #282C34;">
                <children>
-                  <Group layoutX="18.0" layoutY="18.0">
+                  <Group layoutX="18.0" layoutY="18.0" onMouseClicked="#retourAcceuil">
                      <children>
                         <ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -64,7 +64,7 @@
                         <Font name="Open Sans" size="20.0" />
                      </font>
                   </TextField>
-                  <Button layoutX="276.0" layoutY="708.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="270.0" style="-fx-background-radius: 60; -fx-background-color: #2F76FF;" text="Annuler" textFill="WHITE">
+                  <Button layoutX="276.0" layoutY="708.0" mnemonicParsing="false" prefHeight="50.0" onAction="# annuler" prefWidth="270.0" style="-fx-background-radius: 60; -fx-background-color: #2F76FF;" text="Annuler" textFill="WHITE">
                      <font>
                         <Font name="Open Sans" size="32.0" />
                      </font>
@@ -76,7 +76,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button layoutX="755.0" layoutY="708.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="270.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Valider" textFill="WHITE">
+                  <Button layoutX="755.0" layoutY="708.0" mnemonicParsing="false" prefHeight="50.0" onAction="#valider" prefWidth="270.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Valider" textFill="WHITE">
                      <font>
                         <Font name="Open Sans" size="32.0" />
                      </font>
