--- a/wkQuiz/ihm-quizz/src/application/vue/CreationQuestionetCategorie.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/CreationQuestionetCategorie.fxml
@@ -12,6 +12,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.Group?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.Separator?>
 
 <TabPane prefHeight="900.0" prefWidth="1300.0" stylesheets="@css/mainStyle.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.ControlleurCreationQuestionEtCategorie">
    <tabs>
@@ -64,7 +69,7 @@
                         <Font name="Open Sans" size="20.0" />
                      </font>
                   </TextField>
-                  <Button layoutX="276.0" layoutY="708.0" mnemonicParsing="false" prefHeight="50.0" onAction="# annuler" prefWidth="270.0" style="-fx-background-radius: 60; -fx-background-color: #2F76FF;" text="Annuler" textFill="WHITE">
+                  <Button layoutX="276.0" layoutY="708.0" mnemonicParsing="false" prefHeight="50.0" onAction="#annuler" prefWidth="270.0" style="-fx-background-radius: 60; -fx-background-color: #2F76FF;" text="Annuler" textFill="WHITE">
                      <font>
                         <Font name="Open Sans" size="32.0" />
                      </font>
