--- a/wkQuiz/ihm-quizz/src/application/vue/CreationQuestionEtCategorie.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/CreationQuestionEtCategorie.fxml
@@ -77,7 +77,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button layoutX="755.0" layoutY="708.0" mnemonicParsing="false" onAction="#valider" prefHeight="50.0" prefWidth="270.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Valider" textFill="WHITE">
+                  <Button layoutX="755.0" layoutY="708.0" mnemonicParsing="false" onAction="#validerQuestion" prefHeight="50.0" prefWidth="270.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Valider" textFill="WHITE">
                      <font>
                         <Font name="Open Sans" size="32.0" />
                      </font>
