--- a/wkQuiz/ihm-quizz/src/application/vue/EditerQuestion.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/EditerQuestion.fxml
@@ -1,15 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -18,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1450.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.ControlleurEditerQuestion">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1450.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.ControlleurEditerQuestion">
    <children>
       <Group layoutX="32.0" layoutY="20.0" onMouseClicked="#retour">
          <children>
@@ -41,17 +35,7 @@
       </Text>
       <ScrollPane layoutX="80.0" layoutY="280.0" prefHeight="471.0" prefWidth="1290.0">
          <content>
-            <TableView prefHeight="456.0" prefWidth="1980.0" stylesheets="@css/mainStyle.css">
-              <columns>
-                <TableColumn editable="false" maxWidth="1.7976931348623157E308" minWidth="260.0" prefWidth="-1.0" resizable="false" text="Catégorie de la Question" />
-                <TableColumn editable="false" maxWidth="1.7976931348623157E308" minWidth="350.0" prefWidth="-1.0" resizable="false" text="Nom de la Question" />
-                  <TableColumn editable="false" maxWidth="1.7976931348623157E308" minWidth="300.0" prefWidth="-1.0" resizable="false" sortable="false" text="Réponse Juste" />
-                  <TableColumn editable="false" maxWidth="582.0" minWidth="89.0" prefWidth="600.0" resizable="false" sortable="false" text="Réponses fausses" />
-                  <TableColumn editable="false" maxWidth="1.7976931348623157E308" minWidth="350.0" prefWidth="-1.0" resizable="false" sortable="false" text="Feedback" />
-                  <TableColumn editable="false" maxWidth="1.7976931348623157E308" minWidth="70.0" prefWidth="-1.0" resizable="false" sortable="false" text="Modifier" />
-                  <TableColumn editable="false" maxWidth="1.7976931348623157E308" minWidth="70.0" prefWidth="-1.0" resizable="false" sortable="false" text="Supprimer" />
-              </columns>
-            </TableView>
+            <TableView prefHeight="456.0" prefWidth="1980.0" stylesheets="@css/mainStyle.css" />
          </content>
       </ScrollPane>
       <Text fill="WHITE" layoutX="84.0" layoutY="196.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom de la Question :">
@@ -94,7 +78,7 @@
             <Font size="28.0" />
          </font>
       </RadioButton>
-      <Button fx:id="CreerQuestionBouton" layoutX="1010.0" layoutY="28.0" mnemonicParsing="false" onAction="#versCreerQuestion"  prefHeight="80.0" prefWidth="360.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60px;" styleClass="cavajamaismarcher" stylesheets="@css/mainStyle.css" text="Créer une Question" textAlignment="CENTER" textFill="WHITE">
+      <Button fx:id="CreerQuestionBouton" layoutX="1010.0" layoutY="28.0" mnemonicParsing="false" onAction="#versCreerQuestion" prefHeight="80.0" prefWidth="360.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60px;" styleClass="cavajamaismarcher" stylesheets="@css/mainStyle.css" text="Créer une Question" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
