--- a/wkQuiz/ihm-quizz/src/application/vue/css/mainStyle.css
+++ b/wkQuiz/ihm-quizz/src/application/vue/css/mainStyle.css
@@ -96,7 +96,7 @@
 /*                            */
 .radio-button .radio {
     -fx-border-width: 1px;
-    -fx-border-color: -fx-darkest-grey-color;
+    -fx-border-color: #282C34;
     -fx-background-color: white;
     -fx-border-radius: 50px;
     -fx-padding: 10px;
@@ -120,6 +120,31 @@
 /*                               */
 /* fin Gestion des radiobuttons  */
 /*                               */
+.table-view .column-header,
+.table-view .column-header-background .filler {
+    -fx-background-color:  #282C34; 
+    -fx-border-color: #282C34;
+}
+.table-view .column-header .label{
+   -fx-text-fill: white;
+   -fx-font-size: 22px; 
+   /*-fx-alignment: CENTER_LEFT;*/
+   
+}
+.table-view .cell{
+  /* -fx-cell-size: 35; */
+  -fx-text-fill: white;
+  -fx-background-color: #282C34;
+  -fx-border-color: #5c6169;
+  -fx-border-width: 0 0 1 0;
+}
+.table-view .cell:odd{
+  -fx-text-fill: white;
+  -fx-background-color: #3e4451;
+  -fx-border-color: #5c6169;
+  -fx-border-width: 0 0 1 0;
+}
+
 /*                         */
 /*         Divers          */
 /*                         */
