--- a/wkQuiz/ihm-quizz/src/application/vue/EditerQuestions.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/EditerQuestions.fxml
@@ -35,7 +35,7 @@
       </Text>
       <ScrollPane layoutX="80.0" layoutY="280.0" prefHeight="471.0" prefWidth="1290.0">
          <content>
-            <TableView prefHeight="456.0" prefWidth="1980.0" stylesheets="@css/mainStyle.css" />
+            <TableView fx:id="table" prefHeight="456.0" prefWidth="1980.0" stylesheets="@css/mainStyle.css" />
          </content>
       </ScrollPane>
       <Text fill="WHITE" layoutX="84.0" layoutY="196.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom de la Question :">
