--- a/wkQuiz/ihm-quizz/src/application/vue/EditerCategories.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/EditerCategories.fxml
@@ -38,21 +38,13 @@
             <Font name="Open Sans Regular" size="40.0" />
          </font>
       </Text>
-<<<<<<< HEAD
       <TableView fx:id="table" layoutX="80.0" layoutY="280.0" prefHeight="471.0" prefWidth="1290.0"/>
-=======
-      <ScrollPane layoutX="80.0" layoutY="280.0" prefHeight="471.0" prefWidth="1290.0">
-         <content>
-            <TableView fx:id="table" prefHeight="0.0" prefWidth="1274.0" />
-         </content>
-      </ScrollPane>
->>>>>>> ae09d9902bfc6ba65b76f576bb0266ae06f130dd
       <Text fill="WHITE" layoutX="84.0" layoutY="196.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom de la Catégorie :">
          <font>
             <Font name="Open Sans Regular" size="24.0" />
          </font>
       </Text>
-      <TextField fx:id="barreRecherche" layoutX="83.0" layoutY="206.0" onKeyReleased="#filtrer" prefHeight="52.0" prefWidth="445.0" promptText="Nom de la Catégorie" style="-fx-background-radius: 20px;">
+      <TextField layoutX="83.0" layoutY="206.0" prefHeight="52.0" prefWidth="445.0" promptText="Nom de la Catégorie" style="-fx-background-radius: 20px;">
          <font>
             <Font size="20.0" />
          </font>
