--- a/wkQuiz/ihm-quizz/src/application/vue/EditerQuestions.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/EditerQuestions.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="828.0" prefWidth="1300.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"  fx:controller="application.controleurs.ControlleurEditerQuestions">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="828.0" prefWidth="1300.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.ControlleurEditerQuestions">
    <children>
       <Group layoutX="18.0" layoutY="18.0" onMouseClicked="#retourAcceuil">
          <children>
@@ -43,7 +43,7 @@
             <Font name="Open Sans" size="32.0" />
          </font>
       </Label>
-      <ComboBox layoutX="105.0" layoutY="200.0" prefHeight="50.0" prefWidth="300.0" promptText="Choisissez un catégorie" style="-fx-background-radius: 332px;" />
+      <ComboBox fx:id="selectCategorie" layoutX="105.0" layoutY="200.0" prefHeight="50.0" prefWidth="300.0" promptText="Choisissez un catégorie" style="-fx-background-radius: 332px;" />
       <Label layoutX="116.0" layoutY="256.0" prefHeight="51.0" prefWidth="338.0" text="Nom de la question : " textFill="WHITE">
          <font>
             <Font name="Open Sans" size="32.0" />
