--- a/wkQuiz/ihm-quizz/src/application/vue/EditerQuestions.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/EditerQuestions.fxml
@@ -19,7 +19,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="828.0" prefWidth="1300.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.ControlleurEditerQuestions">
    <children>
-      <Group layoutX="18.0" layoutY="18.0" onMouseClicked="#retourAcceuil">
+      <Group layoutX="18.0" layoutY="18.0" onMouseClicked="#retour">
          <children>
             <ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true">
                <image>
